--- a/Properati2/Cube.html
+++ b/Properati2/Cube.html
@@ -915,11 +915,11 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
 <!--#/#--><!--#i4.i181.image.html:image/html-->
 <img id="i181" src="https://i.imgur.com/J4SHjH3.png"/>
 <!--#/#--><!--#i4.i14.text.html:text/html-->
-<div id="i14">¿Donde te gustaría vivir en Bogotá?</div>
+<div id="i14">¿Dónde te gustaría vivir en Bogotá?</div>
 <!--#/#--><!--#i4.i130.image.html:image/html-->
 <img id="i130" src="https://i.imgur.com/xvOsrpd.png"/>
 <!--#/#--><!--#i4.i186.button.html:button/html-->
-<button id="i186">¿Donde quieres vivir?</button>
+<button id="i186">¿Dónde quieres vivir?</button>
 <!--#/#--><!--#i4.i91.shape.html:shape/html-->
 <div id="i91"></div>
 <!--#/#--><!--#i4.i194.image.html:image/html-->
@@ -941,7 +941,7 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
 <!--#/#--><!--#i5.i184.image.html:image/html-->
 <img id="i184" src="https://i.imgur.com/J4SHjH3.png"/>
 <!--#/#--><!--#i5.i188.button.html:button/html-->
-<button id="i188">¿Donde quieres vivir?</button>
+<button id="i188">¿Dónde quieres vivir?</button>
 <!--#/#--><!--#i5.i95.shape.html:shape/html-->
 <div id="i95"></div>
 <!--#/#--><!--#i5.i206.image.html:image/html-->
@@ -957,13 +957,13 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
     <!--#i6.i40.shape.html:shape/html-->
 <div id="i40"></div>
 <!--#/#--><!--#i6.i34.text.html:text/html-->
-<div id="i34">¿Donde arrendar una casa en Bogotá al mejor precio?</div>
+<div id="i34">¿Dónde arrendar una casa en Bogotá al mejor precio?</div>
 <!--#/#--><!--#i6.i60.image.html:image/html-->
 <img id="i60" src="https://i.imgur.com/XvMxX6T.png"/>
 <!--#/#--><!--#i6.i192.image.html:image/html-->
 <img id="i192" src="https://i.imgur.com/J4SHjH3.png"/>
 <!--#/#--><!--#i6.i190.button.html:button/html-->
-<button id="i190">¿Donde quieres vivir?</button>
+<button id="i190">¿Dónde quieres vivir?</button>
 <!--#/#--><!--#i6.i99.shape.html:shape/html-->
 <div id="i99"></div>
 <!--#/#--><!--#i6.i210.image.html:image/html-->
@@ -1079,20 +1079,12 @@ if ('click' === 'click') {
 }
 /*#/#*//*#i4.i50.actions.js:actions/base/js*/
 /* Name: On Click; */
-document.getElementById('i4').addEventListener('click', function(e){
-    /*#i50.i51.actions-clicktag.js:actions-clicktag/base/js.1*/
-    window.mraid ? mraid.open(Adform.getClickURL('')) : window.open(dhtml.getVar('', ''), dhtml.getVar('landingPageTarget', '_blank'));
-/*#/#*/
-});
+
 /*#/#*//*#i5.i58.image.js:image/base/js*/
 
 /*#/#*//*#i95.i175.actions.js:actions/base/js*/
 /* Name: On Click; */
-document.getElementById('i95').addEventListener('click', function(e){
-    /*#i175.i176.actions-clicktag.js:actions-clicktag/base/js.1*/
-    window.mraid ? mraid.open(Adform.getClickURL('')) : window.open(dhtml.getVar('', ''), dhtml.getVar('landingPageTarget', '_blank'));
-/*#/#*/
-});
+
 /*#/#*//*#i5.i184.image.js:image/base/js*/
 
 /*#/#*//*#i184.i185.positioning.js:positioning/base/js.2*/
@@ -1152,11 +1144,7 @@ if ('click' === 'click') {
 }
 /*#/#*//*#i5.i52.actions.js:actions/base/js*/
 /* Name: On Click; */
-document.getElementById('i5').addEventListener('click', function(e){
-    /*#i52.i53.actions-clicktag.js:actions-clicktag/base/js.1*/
-    window.mraid ? mraid.open(Adform.getClickURL('')) : window.open(dhtml.getVar('', ''), dhtml.getVar('landingPageTarget', '_blank'));
-/*#/#*/
-});
+
 /*#/#*//*#i6.i60.image.js:image/base/js*/
 
 /*#/#*//*#i6.i192.image.js:image/base/js*/
@@ -1165,11 +1153,7 @@ document.getElementById('i5').addEventListener('click', function(e){
 bmShow('i192');
 /*#/#*//*#i99.i179.actions.js:actions/base/js*/
 /* Name: On Click; */
-document.getElementById('i99').addEventListener('click', function(e){
-    /*#i179.i180.actions-clicktag.js:actions-clicktag/base/js.1*/
-    window.mraid ? mraid.open(Adform.getClickURL('')) : window.open(dhtml.getVar('', ''), dhtml.getVar('landingPageTarget', '_blank'));
-/*#/#*/
-});
+
 /*#/#*//*#i190.i191.positioning.js:positioning/base/js.2*/
 bmShow('i190');
 /*#/#*//*#i6.i210.image.js:image/base/js*/
@@ -1225,11 +1209,7 @@ if ('click' === 'click') {
 }
 /*#/#*//*#i6.i54.actions.js:actions/base/js*/
 /* Name: On Click; */
-document.getElementById('i6').addEventListener('click', function(e){
-    /*#i54.i55.actions-clicktag.js:actions-clicktag/base/js.1*/
-    window.mraid ? mraid.open(Adform.getClickURL('')) : window.open(dhtml.getVar('', ''), dhtml.getVar('landingPageTarget', '_blank'));
-/*#/#*/
-});
+
 /*#/#*//*#i183.visibility.js:visibility/js*/
 function bmShow(id) {
     var el = document.getElementById(id);
@@ -1276,7 +1256,7 @@ customName: 1;
 /*#/#*//*#i130.i131.positioning.meta:positioning/meta.1*/
 data: /*!*/{"keepAspectRatio":true}/*!*/;
 /*#/#*//*#i4.i186.button.meta:button/meta*/
-name: ¿Donde quieres vivir?;
+name: ¿Dónde quieres vivir?;
 customName: false;
 /*#/#*//*#i186.i187.positioning.meta:positioning/meta.2*/
 data: /*!*/{}/*!*/;
@@ -1320,7 +1300,7 @@ customName: false;
 /*#/#*//*#i184.i185.positioning.meta:positioning/meta.2*/
 data: /*!*/{"keepAspectRatio":true}/*!*/;
 /*#/#*//*#i5.i188.button.meta:button/meta*/
-name: ¿Donde quieres vivir?;
+name: ¿Dónde quieres vivir?;
 customName: false;
 /*#/#*//*#i188.i189.positioning.meta:positioning/meta.2*/
 data: /*!*/{}/*!*/;
@@ -1364,7 +1344,7 @@ customName: false;
 /*#/#*//*#i192.i193.positioning.meta:positioning/meta.2*/
 data: /*!*/{"keepAspectRatio":true}/*!*/;
 /*#/#*//*#i6.i190.button.meta:button/meta*/
-name: ¿Donde quieres vivir?;
+name: ¿Dónde quieres vivir?;
 customName: false;
 /*#/#*//*#i190.i191.positioning.meta:positioning/meta.2*/
 data: /*!*/{}/*!*/;
