--- a/properati1/Fade-Geo.html
+++ b/properati1/Fade-Geo.html
@@ -211,7 +211,7 @@
 
         .cta {
             position: absolute;
-            top: 441px;
+            top: 450px;
             width: 200px;
             line-height: 1.5em;
             z-index: 5;
@@ -247,9 +247,9 @@
                         <span class="bzm_text_title  bzm_text_bold" style="color: black;line-height:1.1; font-size:28px; margin-left:0px; margin-right:0px;text-align: left; width: 90%;">
 						    ¿Quieres un hogar con todas las cómodidades para tu familia?
 						</span>
-                       <span class="bzm_text_medium" style="color: black;line-height:em; font-size:15px; width:95%; text-align:justify;">
+                       <span class="bzm_text_medium" style="color: black;line-height:em; font-size:17px; width:95%; text-align:justify;">
                         <p style="margin-top: 0px; line-height: 1.3em; margin-left: 3px; ">
-                           Contamos con una <b>ubicación privilegiada,</b> para disfrutar en familia las mejores<b> vistas naturales</b> en residencias amplias y hermosas en la ciudad de <b> Barranquilla.</b> </p>
+                           Contamos con una <b>ubicación privilegiada,</b> para disfrutar en familia las mejores<b> vistas naturales</b> en la ciudad de <b> Barranquilla.</b> </p>
 
    <div class="cta">  <a href="https://goo.gl/maps/BfKrukFq8zE2" target="_blank"> 
        <span class="bzm_text_title bzm_text_bold" style="font-size:80%; color: white;">LLÉVAME A MI NUEVO HOGAR </span></a></div>
