--- a/properati1/Venetian.html
+++ b/properati1/Venetian.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <head>
-    <meta charset="UTF-8">
 <title>HTML5 STUDIO BUILDER: Venetian v 1.5</title>
 
 <!-- Adform API Script -->
@@ -2191,22 +2190,22 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
         transform: translate(0, 0) translate(0px, 0px) rotate(0deg);
 }
 /*#/#*//*#i47.text.css:text/base/css*/
-#i47 { position: absolute; white-space: pre-wrap; opacity: 1; background-color: rgba(255,255,255,0); font-family: "Trebuchet MS", Helvetica, sans-serif; font-size: 15px; color: #000000; font-weight: normal; font-style: normal; text-decoration: none; text-align: center; line-height: 100%; letter-spacing: 0px; text-shadow: 0px 0px 0px rgba(214,214,214,1); }
+#i47 { position: absolute; white-space: pre-wrap; opacity: 1; background-color: rgba(255,255,255,0); font-family: "Trebuchet MS", Helvetica, sans-serif; font-size: 15px; color: #000000; font-weight: normal; font-style: normal; text-decoration: none; text-align: justify; line-height: 100%; letter-spacing: 0px; text-shadow: 0px 0px 0px rgba(214,214,214,1); }
 /*#/#*//*#i47.i48.positioning.css:positioning/base/css.2*/
-#i47 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 268px; height: 69px;
-        -ms-transform: translate(0, 0) translate(16px, 498px) rotate(0deg);
-        -webkit-transform: translate(0, 0) translate(16px, 498px) rotate(0deg);
-        -moz-transform: translate(0, 0) translate(16px, 498px) rotate(0deg);
-        transform: translate(0, 0) translate(16px, 498px) rotate(0deg);
+#i47 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 271px; height: 37px;
+        -ms-transform: translate(0, 0) translate(11px, 497px) rotate(0deg);
+        -webkit-transform: translate(0, 0) translate(11px, 497px) rotate(0deg);
+        -moz-transform: translate(0, 0) translate(11px, 497px) rotate(0deg);
+        transform: translate(0, 0) translate(11px, 497px) rotate(0deg);
 }
 /*#/#*//*#i12.text.css:text/base/css*/
 #i12 { position: absolute; opacity: 1; background-color: rgba(255,255,255,0); font-family: Arial, Helvetica, sans-serif; font-size: 20px; color: #000000; font-weight: bold; font-style: normal; text-decoration: none; text-align: center; line-height: 100%; letter-spacing: 0px; text-shadow: 0px 0px 0px rgba(214,214,214,1); }
 /*#/#*//*#i12.i13.positioning.css:positioning/base/css.2*/
-#i12 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 281px; height: 69px;
-        -ms-transform: translate(0, 0) translate(9px, 431px) rotate(0deg);
-        -webkit-transform: translate(0, 0) translate(9px, 431px) rotate(0deg);
-        -moz-transform: translate(0, 0) translate(9px, 431px) rotate(0deg);
-        transform: translate(0, 0) translate(9px, 431px) rotate(0deg);
+#i12 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 282px; height: 69px;
+        -ms-transform: translate(0, 0) translate(8px, 429px) rotate(0deg);
+        -webkit-transform: translate(0, 0) translate(8px, 429px) rotate(0deg);
+        -moz-transform: translate(0, 0) translate(8px, 429px) rotate(0deg);
+        transform: translate(0, 0) translate(8px, 429px) rotate(0deg);
 }
 /*#/#*//*#i2.slice.css:slice/base/css*/
 #i2.adf-SlicedUnit {
@@ -2284,6 +2283,15 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
         -moz-transform: translate(0, 0) translate(159px, 575px) rotate(0deg);
         transform: translate(0, 0) translate(159px, 575px) rotate(0deg);
 }
+/*#/#*//*#i49.text.css:text/base/css*/
+#i49 { position: absolute; white-space: pre-wrap; opacity: 1; background-color: rgba(255,255,255,0); font-family: Arial, Helvetica, sans-serif; font-size: 14px; color: #000000; font-weight: bold; font-style: normal; text-decoration: none; text-align: left; line-height: 100%; letter-spacing: 1px; text-shadow: 0px 0px 0px rgba(214,214,214,1); }
+/*#/#*//*#i49.i50.positioning.css:positioning/base/css.2*/
+#i49 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 279px; height: 31px;
+        -ms-transform: translate(0, 0) translate(12px, 532px) rotate(0deg);
+        -webkit-transform: translate(0, 0) translate(12px, 532px) rotate(0deg);
+        -moz-transform: translate(0, 0) translate(12px, 532px) rotate(0deg);
+        transform: translate(0, 0) translate(12px, 532px) rotate(0deg);
+}
 /*#/#*/
 </style>
 <!--#/#--></head>
@@ -2291,7 +2299,7 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
 <!--#html:common/html--><!--#i1.core.html:core/html--><!--#/#--><!--#i30.shape.html:shape/html-->
 <div id="i30"></div>
 <!--#/#--><!--#i47.text.html:text/html-->
-<div id="i47">Contamos con Terraza Lounge, Teatrino, Gimnasio, Sauna y Salón de Juegos.  ¡Adquiere tu apartamento con solo el 20% de inicial!</div>
+<div id="i47">Contamos con Terraza Lounge, Teatrino, Gimnasio, Sauna y Salón de Juegos.</div>
 <!--#/#--><!--#i12.text.html:text/html-->
 <div id="i12">¿Deseas vivir en un lugar  con todos los lujos para tí y tu familia ?</div>
 <!--#/#--><!--#i2.slice.html:slice/html-->
@@ -2318,10 +2326,14 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
 <img id="i36" src="https://i.imgur.com/YN2Vf5g.png"/>
 <!--#/#--><!--#i44.image.html:image/html-->
 <img id="i44" src="https://i.imgur.com/g2Ycmvh.png"/>
+<!--#/#--><!--#i49.text.html:text/html-->
+<div id="i49">¡Adquiere tu apartamento con solo el 20% de inicial!</div>
 <!--#/#--><!--#/#--><!--#js:common/js-->
 <script>
 /*#i30.i31.positioning.js:positioning/base/js.2*/
 bmShow('i30');
+/*#/#*//*#i47.i48.positioning.js:positioning/base/js.2*/
+bmShow('i47');
 /*#/#*//*#i12.i13.positioning.js:positioning/base/js.2*/
 bmShow('i12');
 /*#/#*//*#i2.slice.js:slice/js*/
@@ -2442,8 +2454,8 @@ if ('click' === 'click') {
 
 /*#/#*//*#i44.i45.positioning.js:positioning/base/js.2*/
 bmShow('i44');
-/*#/#*//*#i47.i48.positioning.js:positioning/base/js.2*/
-bmShow('i47');
+/*#/#*//*#i49.i50.positioning.js:positioning/base/js.2*/
+bmShow('i49');
 /*#/#*//*#i9.visibility.js:visibility/js*/
 function bmShow(id) {
     var el = document.getElementById(id);
@@ -2462,7 +2474,7 @@ name: Shape 1;
 /*#/#*//*#i30.i31.positioning.meta:positioning/meta.2*/
 data: /*!*/{}/*!*/;
 /*#/#*//*#i47.text.meta:text/meta*/
-name: Contamos con Terraza Lounge, Teatrino, Gimnasio, Sauna y Salón de Juegos.  ¡Adquiere tu apartamento con solo el 20% de inicial!; customName: false;
+name: Contamos con Terraza Lounge, Teatrino, Gimnasio, Sauna y Salón de Juegos.; customName: false;
 /*#/#*//*#i47.i48.positioning.meta:positioning/meta.2*/
 data: /*!*/{}/*!*/;
 /*#/#*//*#i12.text.meta:text/meta*/
@@ -2512,4 +2524,8 @@ name: g2Ycmvh.png; fileId: ; sourceTypeId: externalUrl; autoDimensions: 1;
 customName: false;
 /*#/#*//*#i44.i45.positioning.meta:positioning/meta.2*/
 data: /*!*/{"keepAspectRatio":true}/*!*/;
+/*#/#*//*#i49.text.meta:text/meta*/
+name: ¡Adquiere tu apartamento con solo el 20% de inicial!; customName: false;
+/*#/#*//*#i49.i50.positioning.meta:positioning/meta.2*/
+data: /*!*/{}/*!*/;
 /*#/#*/--><!--#/#-->
