cambio texto y logo

--- a/chevy/equinox/Cube.html
+++ b/chevy/equinox/Cube.html
@@ -529,11 +529,11 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
 /*#/#*//*#i4.i181.image.css:image/base/css*/
 #i181 { opacity: 1; }
 /*#/#*//*#i181.i182.positioning.css:positioning/base/css.2*/
-#i181 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 100px; height: 30px;
-        -ms-transform: translate(0, 0) translate(194px, 216px) rotate(0deg);
-        -webkit-transform: translate(0, 0) translate(194px, 216px) rotate(0deg);
-        -moz-transform: translate(0, 0) translate(194px, 216px) rotate(0deg);
-        transform: translate(0, 0) translate(194px, 216px) rotate(0deg);
+#i181 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 76px; height: 34px;
+        -ms-transform: translate(0, 0) translate(217px, 212px) rotate(0deg);
+        -webkit-transform: translate(0, 0) translate(217px, 212px) rotate(0deg);
+        -moz-transform: translate(0, 0) translate(217px, 212px) rotate(0deg);
+        transform: translate(0, 0) translate(217px, 212px) rotate(0deg);
 }
 /*#/#*//*#i4.i91.shape.css:shape/base/css*/
 #i91 { background-color: #dedede; opacity: 0.00;
@@ -706,14 +706,14 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
         -moz-transform: translate(0, 0) translate(0px, 0px) rotate(0deg);
         transform: translate(0, 0) translate(0px, 0px) rotate(0deg);
 }
-/*#/#*//*#i5.i224.image.css:image/base/css*/
-#i224 { opacity: 1; }
-/*#/#*//*#i224.i225.positioning.css:positioning/base/css.2*/
-#i224 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 100px; height: 30px;
-        -ms-transform: translate(0, 0) translate(198px, 217px) rotate(0deg);
-        -webkit-transform: translate(0, 0) translate(198px, 217px) rotate(0deg);
-        -moz-transform: translate(0, 0) translate(198px, 217px) rotate(0deg);
-        transform: translate(0, 0) translate(198px, 217px) rotate(0deg);
+/*#/#*//*#i5.i230.image.css:image/base/css*/
+#i230 { opacity: 1; }
+/*#/#*//*#i230.i231.positioning.css:positioning/base/css.2*/
+#i230 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 76px; height: 34px;
+        -ms-transform: translate(0, 0) translate(217px, 212px) rotate(0deg);
+        -webkit-transform: translate(0, 0) translate(217px, 212px) rotate(0deg);
+        -moz-transform: translate(0, 0) translate(217px, 212px) rotate(0deg);
+        transform: translate(0, 0) translate(217px, 212px) rotate(0deg);
 }
 /*#/#*//*#i5.i95.shape.css:shape/base/css*/
 #i95 { background-color: #dedede; opacity: 0.00;
@@ -740,13 +740,13 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
         transform: translate(0, 0) translate(0, 0) rotate(0deg);
 }
 /*#/#*//*#i6.i34.text.css:text/base/css*/
-#i34 { position: absolute; opacity: 1; background-color: rgba(255,255,255,0); font-family: LouisRegular; font-size: 18px; color: #1d1d1d; font-weight: bold; font-style: normal; text-decoration: none; text-align: left; line-height: 100%; letter-spacing: 0px; text-shadow: 0px 0px 0px rgba(255,255,255,0); margin-top: -3px;}
+#i34 { position: absolute; opacity: 1; background-color: rgba(255,255,255,0); font-family: LouisRegular; font-size: 17px; color: #1d1d1d; font-weight: bold; font-style: normal; text-decoration: none; text-align: left; line-height: 100%; letter-spacing: 0px; text-shadow: 0px 0px 0px rgba(255,255,255,0); margin-top: -3px;}
 /*#/#*//*#i34.i35.positioning.css:positioning/base/css.1*/
 #i34 { position: absolute; top: 50%; left: 50%; overflow: hidden; width: 257px; height: 55px;
-        -ms-transform: translate(-50%, -50%) translate(0px, 70px) rotate(0deg);
-        -webkit-transform: translate(-50%, -50%) translate(0px, 70px) rotate(0deg);
-        -moz-transform: translate(-50%, -50%) translate(0px, 70px) rotate(0deg);
-        transform: translate(-50%, -50%) translate(0px, 70px) rotate(0deg);
+        -ms-transform: translate(-50%, -50%) translate(0px, 71px) rotate(0deg);
+        -webkit-transform: translate(-50%, -50%) translate(0px, 71px) rotate(0deg);
+        -moz-transform: translate(-50%, -50%) translate(0px, 71px) rotate(0deg);
+        transform: translate(-50%, -50%) translate(0px, 71px) rotate(0deg);
 }
 /*#/#*//*#i6.i60.image.css:image/base/css*/
 #i60 { opacity: 1; }
@@ -757,14 +757,14 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
         -moz-transform: translate(0, 0) translate(0px, 0px) rotate(0deg);
         transform: translate(0, 0) translate(0px, 0px) rotate(0deg);
 }
-/*#/#*//*#i6.i226.image.css:image/base/css*/
-#i226 { opacity: 1; }
-/*#/#*//*#i226.i227.positioning.css:positioning/base/css.2*/
-#i226 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 100px; height: 30px;
-        -ms-transform: translate(0, 0) translate(198px, 217px) rotate(0deg);
-        -webkit-transform: translate(0, 0) translate(198px, 217px) rotate(0deg);
-        -moz-transform: translate(0, 0) translate(198px, 217px) rotate(0deg);
-        transform: translate(0, 0) translate(198px, 217px) rotate(0deg);
+/*#/#*//*#i6.i232.image.css:image/base/css*/
+#i232 { opacity: 1; }
+/*#/#*//*#i232.i233.positioning.css:positioning/base/css.2*/
+#i232 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 76px; height: 34px;
+        -ms-transform: translate(0, 0) translate(217px, 212px) rotate(0deg);
+        -webkit-transform: translate(0, 0) translate(217px, 212px) rotate(0deg);
+        -moz-transform: translate(0, 0) translate(217px, 212px) rotate(0deg);
+        transform: translate(0, 0) translate(217px, 212px) rotate(0deg);
 }
 /*#/#*//*#i6.i99.shape.css:shape/base/css*/
 #i99 { background-color: #dedede; opacity: 0.00;
@@ -816,7 +816,7 @@ url('fonts/') format('svg');
 <!--#/#--><!--#i4.i130.image.html:image/html-->
 <img id="i130" src="https://i.imgur.com/V1oeWRq.gif"/>
 <!--#/#--><!--#i4.i181.image.html:image/html-->
-<img id="i181" src="https://i.imgur.com/ewo5bt5.jpg"/>
+<img id="i181" src="https://i.imgur.com/KPJNfzN.png"/>
 <!--#/#--><!--#i4.i91.shape.html:shape/html-->
 <div id="i91"></div>
 <!--#/#-->
@@ -829,8 +829,8 @@ url('fonts/') format('svg');
 <div id="i24">Los amantes de la estética al fin se van a sentir cómodos. </div>
 <!--#/#--><!--#i5.i58.image.html:image/html-->
 <img id="i58" src="https://i.imgur.com/OLSQcbD.jpg"/>
-<!--#/#--><!--#i5.i224.image.html:image/html-->
-<img id="i224" src="https://i.imgur.com/ewo5bt5.jpg"/>
+<!--#/#--><!--#i5.i230.image.html:image/html-->
+<img id="i230" src="https://i.imgur.com/KPJNfzN.png"/>
 <!--#/#--><!--#i5.i95.shape.html:shape/html-->
 <div id="i95"></div>
 <!--#/#-->
@@ -840,11 +840,11 @@ url('fonts/') format('svg');
     <!--#i6.i40.shape.html:shape/html-->
 <div id="i40"></div>
 <!--#/#--><!--#i6.i34.text.html:text/html-->
-<div id="i34">Tecnología para divertirse y también para proteger a tu familia.</div>
+<div id="i34">Chevrolet Equinox: Respaldo, diseño y tecnología en una SUV</div>
 <!--#/#--><!--#i6.i60.image.html:image/html-->
 <img id="i60" src="https://i.imgur.com/WRLSGEZ.jpg"/>
-<!--#/#--><!--#i6.i226.image.html:image/html-->
-<img id="i226" src="https://i.imgur.com/ewo5bt5.jpg"/>
+<!--#/#--><!--#i6.i232.image.html:image/html-->
+<img id="i232" src="https://i.imgur.com/KPJNfzN.png"/>
 <!--#/#--><!--#i6.i99.shape.html:shape/html-->
 <div id="i99"></div>
 <!--#/#-->
@@ -907,10 +907,10 @@ document.getElementById('i91').addEventListener('click', function(e){
    
 /*#/#*//*#i5.i58.image.js:image/base/js*/
 
-/*#/#*//*#i5.i224.image.js:image/base/js*/
+/*#/#*//*#i5.i230.image.js:image/base/js*/
 
-/*#/#*//*#i224.i225.positioning.js:positioning/base/js.2*/
-bmShow('i224');
+/*#/#*//*#i230.i231.positioning.js:positioning/base/js.2*/
+bmShow('i230');
 /*#/#*//*#i95.i175.actions.js:actions/base/js*/
 /* Name: On Click; */
 document.getElementById('i95').addEventListener('click', function(e){
@@ -922,13 +922,13 @@ document.getElementById('i95').addEventListener('click', function(e){
 /* Name: On Click; */
 
 /*#/#*//*#i52.i53.actions-clicktag.js:actions-clicktag/base/js.1*/
-   
+  
 /*#/#*//*#i6.i60.image.js:image/base/js*/
 
-/*#/#*//*#i6.i226.image.js:image/base/js*/
+/*#/#*//*#i6.i232.image.js:image/base/js*/
 
-/*#/#*//*#i226.i227.positioning.js:positioning/base/js.2*/
-bmShow('i226');
+/*#/#*//*#i232.i233.positioning.js:positioning/base/js.2*/
+bmShow('i232');
 /*#/#*//*#i99.i179.actions.js:actions/base/js*/
 /* Name: On Click; */
 document.getElementById('i99').addEventListener('click', function(e){
@@ -940,7 +940,7 @@ document.getElementById('i99').addEventListener('click', function(e){
 /* Name: On Click; */
 
 /*#/#*//*#i54.i55.actions-clicktag.js:actions-clicktag/base/js.1*/
-    
+   
 /*#/#*//*#i183.visibility.js:visibility/js*/
 function bmShow(id) {
     var el = document.getElementById(id);
@@ -982,7 +982,7 @@ customName: 1;
 /*#/#*//*#i130.i131.positioning.meta:positioning/meta.1*/
 data: /*!*/{"keepAspectRatio":true}/*!*/;
 /*#/#*//*#i4.i181.image.meta:image/meta*/
-name: 5I6wyNR.jpg; fileId: ; sourceTypeId: externalUrl; autoDimensions: 1;
+name: KPJNfzN.png; fileId: ; sourceTypeId: externalUrl; autoDimensions: 1;
 customName: false;
 /*#/#*//*#i181.i182.positioning.meta:positioning/meta.2*/
 data: /*!*/{"keepAspectRatio":true}/*!*/;
@@ -1005,10 +1005,10 @@ name: Imagen de Cuadro; fileId: ; sourceTypeId: externalUrl; autoDimensions: 1;
 customName: 1;
 /*#/#*//*#i58.i59.positioning.meta:positioning/meta.1*/
 data: /*!*/{"keepAspectRatio":true}/*!*/;
-/*#/#*//*#i5.i224.image.meta:image/meta*/
-name: 5I6wyNR.jpg; fileId: ; sourceTypeId: externalUrl; autoDimensions: 1;
+/*#/#*//*#i5.i230.image.meta:image/meta*/
+name: KPJNfzN.png; fileId: ; sourceTypeId: externalUrl; autoDimensions: 1;
 customName: false;
-/*#/#*//*#i224.i225.positioning.meta:positioning/meta.2*/
+/*#/#*//*#i230.i231.positioning.meta:positioning/meta.2*/
 data: /*!*/{"keepAspectRatio":true}/*!*/;
 /*#/#*//*#i5.i95.shape.meta:shape/meta*/
 name: Link;
@@ -1029,10 +1029,10 @@ name: Imagen de Cuadro; fileId: ; sourceTypeId: externalUrl; autoDimensions: 1;
 customName: 1;
 /*#/#*//*#i60.i61.positioning.meta:positioning/meta.1*/
 data: /*!*/{"keepAspectRatio":true}/*!*/;
-/*#/#*//*#i6.i226.image.meta:image/meta*/
-name: 5I6wyNR.jpg; fileId: ; sourceTypeId: externalUrl; autoDimensions: 1;
+/*#/#*//*#i6.i232.image.meta:image/meta*/
+name: KPJNfzN.png; fileId: ; sourceTypeId: externalUrl; autoDimensions: 1;
 customName: false;
-/*#/#*//*#i226.i227.positioning.meta:positioning/meta.2*/
+/*#/#*//*#i232.i233.positioning.meta:positioning/meta.2*/
 data: /*!*/{"keepAspectRatio":true}/*!*/;
 /*#/#*//*#i6.i99.shape.meta:shape/meta*/
 name: Link;
