correccion venetian equinox

--- a/chevy/equinox/Venetian.html
+++ b/chevy/equinox/Venetian.html
@@ -2190,31 +2190,31 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
         transform: translate(0, 0) translate(0px, 0px) rotate(0deg);
 }
 /*#/#*//*#i7.text.css:text/base/css*/
-#i7 { position: absolute; opacity: 1; background-color: rgba(255,255,255,0); font-family: LouisRegular; font-size: 24px; color: #000000; font-weight: bold; font-style: normal; text-decoration: none; text-align: center; line-height: 100%; letter-spacing: 0px; text-shadow: 0px 0px 0px rgba(214,214,214,1); }
+#i7 { position: absolute; opacity: 1; background-color: rgba(255,255,255,0); font-family: "LouisGlobal2-Reg"; font-size: 24px; color: #000000; font-weight: bold; font-style: normal; text-decoration: none; text-align: center; line-height: 100%; letter-spacing: 0px; text-shadow: 0px 0px 0px rgba(214,214,214,1); }
 /*#/#*//*#i7.i8.positioning.css:positioning/base/css.2*/
 #i7 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 283px; height: 110px;
-        -ms-transform: translate(0, 0) translate(8px, 371px) rotate(0deg);
-        -webkit-transform: translate(0, 0) translate(8px, 371px) rotate(0deg);
-        -moz-transform: translate(0, 0) translate(8px, 371px) rotate(0deg);
-        transform: translate(0, 0) translate(8px, 371px) rotate(0deg);
-}
-/*#/#*//*#i12.text.css:text/base/css*/
-#i12 { position: absolute; opacity: 1; background-color: rgba(255,255,255,0); font-family: LouisRegular; font-size: 15px; color: #000000; font-weight: normal; font-style: normal; text-decoration: none; text-align: left; line-height: 100%; letter-spacing: 0px; text-shadow: 0px 0px 0px rgba(214,214,214,1); }
-/*#/#*//*#i12.i13.positioning.css:positioning/base/css.2*/
-#i12 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 265px; height: 77px;
-        -ms-transform: translate(0, 0) translate(18px, 481px) rotate(0deg);
-        -webkit-transform: translate(0, 0) translate(18px, 481px) rotate(0deg);
-        -moz-transform: translate(0, 0) translate(18px, 481px) rotate(0deg);
-        transform: translate(0, 0) translate(18px, 481px) rotate(0deg);
+        -ms-transform: translate(0, 0) translate(11px, 362px) rotate(0deg);
+        -webkit-transform: translate(0, 0) translate(11px, 362px) rotate(0deg);
+        -moz-transform: translate(0, 0) translate(11px, 362px) rotate(0deg);
+        transform: translate(0, 0) translate(11px, 362px) rotate(0deg);
 }
 /*#/#*//*#i16.image.css:image/base/css*/
 #i16 { opacity: 1; }
 /*#/#*//*#i16.i17.positioning.css:positioning/base/css.2*/
-#i16 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 112px; height: 38px;
-        -ms-transform: translate(0, 0) translate(180px, 553px) rotate(0deg);
-        -webkit-transform: translate(0, 0) translate(180px, 553px) rotate(0deg);
-        -moz-transform: translate(0, 0) translate(180px, 553px) rotate(0deg);
-        transform: translate(0, 0) translate(180px, 553px) rotate(0deg);
+#i16 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 100px; height: 45px;
+        -ms-transform: translate(0, 0) translate(191px, 549px) rotate(0deg);
+        -webkit-transform: translate(0, 0) translate(191px, 549px) rotate(0deg);
+        -moz-transform: translate(0, 0) translate(191px, 549px) rotate(0deg);
+        transform: translate(0, 0) translate(191px, 549px) rotate(0deg);
+}
+/*#/#*//*#i37.image.css:image/base/css*/
+#i37 { opacity: 1; }
+/*#/#*//*#i37.i38.positioning.css:positioning/base/css.2*/
+#i37 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 276px; height: 85px;
+        -ms-transform: translate(0, 0) translate(10px, 450px) rotate(0deg);
+        -webkit-transform: translate(0, 0) translate(10px, 450px) rotate(0deg);
+        -moz-transform: translate(0, 0) translate(10px, 450px) rotate(0deg);
+        transform: translate(0, 0) translate(10px, 450px) rotate(0deg);
 }
 /*#/#*//*#i2.slice.css:slice/base/css*/
 #i2.adf-SlicedUnit {
@@ -2257,6 +2257,18 @@ url('fonts/') format('opentype'),
 url('fonts/') format('svg');
 }
 /*#/#*/
+/*#/#*//*#i35.font-local.css:font/font-local/css*/
+/*#i35.i36.font-local.css:font-local/css.1*/
+@font-face {
+font-family: 'LouisGlobal2-Reg';
+src: url('fonts/');
+src: url('fonts/?#iefix') format('embedded-opentype'),
+url('fonts/') format('woff'),
+url('fonts/') format('truetype'),
+url('fonts/LouisGlobal2-Reg.otf') format('opentype'),
+url('fonts/') format('svg');
+}
+/*#/#*/
 /*#/#*/
 </style>
 <!--#/#--></head>
@@ -2266,13 +2278,10 @@ url('fonts/') format('svg');
 <!--#/#--><!--#i7.text.html:text/html-->
 <div id="i7">Tecnología para divertirse y también para proteger 
 a tu familia.</div>
-<!--#/#--><!--#i12.text.html:text/html-->
-<div id="i12">1.- Alerta de colisión frontal.
-2.- Alerta de tráfico cruzado.
-3.- Asistente de permanencia en carril.
-4.- Cámara de visión trasera.</div>
 <!--#/#--><!--#i16.image.html:image/html-->
-<img id="i16" src="https://i.imgur.com/ewo5bt5.jpg"/>
+<img id="i16" src="https://i.imgur.com/KPJNfzN.png"/>
+<!--#/#--><!--#i37.image.html:image/html-->
+<img id="i37" src="https://i.imgur.com/UoYZLf8.jpg"/>
 <!--#/#--><!--#i2.slice.html:slice/html-->
 <div id="i2" class="adf-SliceBox">
     <!--#i2.i4.slice-image.html:slice-image/html-->
@@ -2281,25 +2290,26 @@ a tu familia.</div>
 <dataimg id="i5" src="https://i.imgur.com/GUqaOub.jpg"></dataimg>
 <!--#/#--><!--#i2.i6.slice-image.html:slice-image/html-->
 <dataimg id="i6" src="https://i.imgur.com/Z4GMKal.gif"></dataimg>
-<!--#/#--><!--#i2.i32.slice-image.html:slice-image/html-->
-<dataimg id="i32" src="https://i.imgur.com/OBk14LT.jpg"></dataimg>
 <!--#/#-->
 </div>
 <!--#/#--><!--#i26.button.html:button/html-->
 <button id="i26"></button>
 <!--#/#--><!--#i33.font.html:font/html-->
+<!--#/#--><!--#i35.font.html:font/html-->
 <!--#/#--><!--#/#--><!--#js:common/js-->
 <script>
 /*#i30.i31.positioning.js:positioning/base/js.2*/
 bmShow('i30');
 /*#/#*//*#i7.i8.positioning.js:positioning/base/js.2*/
 bmShow('i7');
-/*#/#*//*#i12.i13.positioning.js:positioning/base/js.2*/
-bmShow('i12');
 /*#/#*//*#i16.image.js:image/base/js*/
 
 /*#/#*//*#i16.i17.positioning.js:positioning/base/js.2*/
 bmShow('i16');
+/*#/#*//*#i37.image.js:image/base/js*/
+
+/*#/#*//*#i37.i38.positioning.js:positioning/base/js.2*/
+bmShow('i37');
 /*#/#*//*#i2.slice.js:slice/js*/
 document.addEventListener('DOMContentLoaded', function() {
     var slicedUnit_i2 = new Adf.SlicedUnit({
@@ -2344,8 +2354,6 @@ document.addEventListener('DOMContentLoaded', function() {
 
 /*#/#*//*#i2.i6.slice-image.js:slice-image/base/js*/
 
-/*#/#*//*#i2.i32.slice-image.js:slice-image/base/js*/
-
 /*#/#*//*#i26.i27.positioning.js:positioning/base/js.2*/
 bmShow('i26');
 /*#/#*//*#i26.i28.actions.js:actions/base/js.1*/
@@ -2383,17 +2391,15 @@ name: Tecnología para divertirse y también para proteger
 a tu familia.; customName: false;
 /*#/#*//*#i7.i8.positioning.meta:positioning/meta.2*/
 data: /*!*/{}/*!*/;
-/*#/#*//*#i12.text.meta:text/meta*/
-name: 1.- Alerta de colisión frontal.
-2.- Alerta de tráfico cruzado.
-3.- Asistente de permanencia en carril.
-4.- Cámara de visión trasera.; customName: false;
-/*#/#*//*#i12.i13.positioning.meta:positioning/meta.2*/
-data: /*!*/{}/*!*/;
 /*#/#*//*#i16.image.meta:image/meta*/
-name: ewo5bt5.jpg; fileId: ; sourceTypeId: externalUrl; autoDimensions: 1;
+name: KPJNfzN.png; fileId: ; sourceTypeId: externalUrl; autoDimensions: 1;
 customName: false;
 /*#/#*//*#i16.i17.positioning.meta:positioning/meta.2*/
+data: /*!*/{"keepAspectRatio":true}/*!*/;
+/*#/#*//*#i37.image.meta:image/meta*/
+name: UoYZLf8.jpg; fileId: ; sourceTypeId: externalUrl; autoDimensions: 1;
+customName: false;
+/*#/#*//*#i37.i38.positioning.meta:positioning/meta.2*/
 data: /*!*/{"keepAspectRatio":true}/*!*/;
 /*#/#*//*#i2.slice.meta:slice/meta*/
 name: Slice 1;
@@ -2404,8 +2410,6 @@ name: yEMEXMC.jpg; fileId: ; sourceTypeId: externalUrl;
 name: GUqaOub.jpg; fileId: ; sourceTypeId: externalUrl;
 /*#/#*//*#i2.i6.slice-image.meta:slice-image/meta*/
 name: Z4GMKal.gif; fileId: ; sourceTypeId: externalUrl;
-/*#/#*//*#i2.i32.slice-image.meta:slice-image/meta*/
-name: OBk14LT.jpg; fileId: ; sourceTypeId: externalUrl;
 /*#/#*//*#i2.i3.positioning.meta:positioning/meta.1*/
 data: /*!*/{}/*!*/;
 /*#/#*//*#i26.button.meta:button/meta*/
@@ -2415,4 +2419,6 @@ customName: false;
 data: /*!*/{}/*!*/;
 /*#/#*//*#i33.font.meta:font/meta*/
 name: Web Font: LouisRegular; type: font-local; customName: ;
+/*#/#*//*#i35.font.meta:font/meta*/
+name: Web Font: LouisGlobal2-Reg; type: font-local; customName: ;
 /*#/#*/--><!--#/#-->
