--- a/chevy/equinox/Venetian.html
+++ b/chevy/equinox/Venetian.html
@@ -2190,13 +2190,22 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
         transform: translate(0, 0) translate(0px, 0px) rotate(0deg);
 }
 /*#/#*//*#i7.text.css:text/base/css*/
-#i7 { position: absolute; opacity: 1; background-color: rgba(255,255,255,0); font-family: "LouisGlobal2-Reg"; font-size: 24px; color: #000000; font-weight: bold; font-style: normal; text-decoration: none; text-align: center; line-height: 100%; letter-spacing: 0px; text-shadow: 0px 0px 0px rgba(214,214,214,1); }
+#i7 { position: absolute; opacity: 1; background-color: rgba(255,255,255,0); font-family: LouisRegular; font-size: 27px; color: #000000; font-weight: bold; font-style: normal; text-decoration: none; text-align: center; line-height: 100%; letter-spacing: 0px; text-shadow: 0px 0px 0px rgba(214,214,214,1); }
 /*#/#*//*#i7.i8.positioning.css:positioning/base/css.2*/
 #i7 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 283px; height: 110px;
-        -ms-transform: translate(0, 0) translate(11px, 362px) rotate(0deg);
-        -webkit-transform: translate(0, 0) translate(11px, 362px) rotate(0deg);
-        -moz-transform: translate(0, 0) translate(11px, 362px) rotate(0deg);
-        transform: translate(0, 0) translate(11px, 362px) rotate(0deg);
+        -ms-transform: translate(0, 0) translate(8px, 371px) rotate(0deg);
+        -webkit-transform: translate(0, 0) translate(8px, 371px) rotate(0deg);
+        -moz-transform: translate(0, 0) translate(8px, 371px) rotate(0deg);
+        transform: translate(0, 0) translate(8px, 371px) rotate(0deg);
+}
+/*#/#*//*#i12.text.css:text/base/css*/
+#i12 { position: absolute; opacity: 1; background-color: rgba(255,255,255,0); font-family: LouisRegular; font-size: 22px; color: #000000; font-weight: normal; font-style: normal; text-decoration: none; text-align: left; line-height: 100%; letter-spacing: 0px; text-shadow: 0px 0px 0px rgba(214,214,214,1); }
+/*#/#*//*#i12.i13.positioning.css:positioning/base/css.2*/
+#i12 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 265px; height: 77px;
+        -ms-transform: translate(0, 0) translate(18px, 473px) rotate(0deg);
+        -webkit-transform: translate(0, 0) translate(18px, 473px) rotate(0deg);
+        -moz-transform: translate(0, 0) translate(18px, 473px) rotate(0deg);
+        transform: translate(0, 0) translate(18px, 473px) rotate(0deg);
 }
 /*#/#*//*#i16.image.css:image/base/css*/
 #i16 { opacity: 1; }
@@ -2206,15 +2215,6 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
         -webkit-transform: translate(0, 0) translate(191px, 549px) rotate(0deg);
         -moz-transform: translate(0, 0) translate(191px, 549px) rotate(0deg);
         transform: translate(0, 0) translate(191px, 549px) rotate(0deg);
-}
-/*#/#*//*#i37.image.css:image/base/css*/
-#i37 { opacity: 1; }
-/*#/#*//*#i37.i38.positioning.css:positioning/base/css.2*/
-#i37 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 276px; height: 85px;
-        -ms-transform: translate(0, 0) translate(10px, 450px) rotate(0deg);
-        -webkit-transform: translate(0, 0) translate(10px, 450px) rotate(0deg);
-        -moz-transform: translate(0, 0) translate(10px, 450px) rotate(0deg);
-        transform: translate(0, 0) translate(10px, 450px) rotate(0deg);
 }
 /*#/#*//*#i2.slice.css:slice/base/css*/
 #i2.adf-SlicedUnit {
@@ -2240,10 +2240,10 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
 #i26:active { opacity: 1; background-color: rgba(0,80,130,0); font-family: Arial, Helvetica, sans-serif; font-size: 12px; color: #ffffff; font-weight: normal; font-style: normal; text-decoration: none; text-align: center; line-height: 100%; letter-spacing: 0px; text-shadow: 0px 0px 0px rgba(214,214,214,0); border-radius: 1px; border-color: rgba(54,54,54,1); border-width: 1px; margin:-1px; border-style: solid; }
 /*#/#*//*#i26.i27.positioning.css:positioning/base/css.2*/
 #i26 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 299px; height: 600px;
-        -ms-transform: translate(0, 0) translate(1px, 0px) rotate(0deg);
-        -webkit-transform: translate(0, 0) translate(1px, 0px) rotate(0deg);
-        -moz-transform: translate(0, 0) translate(1px, 0px) rotate(0deg);
-        transform: translate(0, 0) translate(1px, 0px) rotate(0deg);
+        -ms-transform: translate(0, 0) translate(0px, 0px) rotate(0deg);
+        -webkit-transform: translate(0, 0) translate(0px, 0px) rotate(0deg);
+        -moz-transform: translate(0, 0) translate(0px, 0px) rotate(0deg);
+        transform: translate(0, 0) translate(0px, 0px) rotate(0deg);
 }
 /*#/#*//*#i33.font-local.css:font/font-local/css*/
 /*#i33.i34.font-local.css:font-local/css.1*/
@@ -2260,12 +2260,12 @@ url('fonts/') format('svg');
 /*#/#*//*#i35.font-local.css:font/font-local/css*/
 /*#i35.i36.font-local.css:font-local/css.1*/
 @font-face {
-font-family: 'LouisGlobal2-Reg';
+font-family: '';
 src: url('fonts/');
 src: url('fonts/?#iefix') format('embedded-opentype'),
 url('fonts/') format('woff'),
 url('fonts/') format('truetype'),
-url('fonts/LouisGlobal2-Reg.otf') format('opentype'),
+url('fonts/') format('opentype'),
 url('fonts/') format('svg');
 }
 /*#/#*/
@@ -2276,12 +2276,11 @@ url('fonts/') format('svg');
 <!--#html:common/html--><!--#i1.core.html:core/html--><!--#/#--><!--#i30.shape.html:shape/html-->
 <div id="i30"></div>
 <!--#/#--><!--#i7.text.html:text/html-->
-<div id="i7">Tecnología para divertirse y también para proteger 
-a tu familia.</div>
+<div id="i7">Chevrolet Quinox: Respaldo, diseño y tecnología en una SUV</div>
+<!--#/#--><!--#i12.text.html:text/html-->
+<div id="i12">Este mes, precios que no volverás a ver.</div>
 <!--#/#--><!--#i16.image.html:image/html-->
 <img id="i16" src="https://i.imgur.com/KPJNfzN.png"/>
-<!--#/#--><!--#i37.image.html:image/html-->
-<img id="i37" src="https://i.imgur.com/UoYZLf8.jpg"/>
 <!--#/#--><!--#i2.slice.html:slice/html-->
 <div id="i2" class="adf-SliceBox">
     <!--#i2.i4.slice-image.html:slice-image/html-->
@@ -2302,14 +2301,12 @@ a tu familia.</div>
 bmShow('i30');
 /*#/#*//*#i7.i8.positioning.js:positioning/base/js.2*/
 bmShow('i7');
+/*#/#*//*#i12.i13.positioning.js:positioning/base/js.2*/
+bmShow('i12');
 /*#/#*//*#i16.image.js:image/base/js*/
 
 /*#/#*//*#i16.i17.positioning.js:positioning/base/js.2*/
 bmShow('i16');
-/*#/#*//*#i37.image.js:image/base/js*/
-
-/*#/#*//*#i37.i38.positioning.js:positioning/base/js.2*/
-bmShow('i37');
 /*#/#*//*#i2.slice.js:slice/js*/
 document.addEventListener('DOMContentLoaded', function() {
     var slicedUnit_i2 = new Adf.SlicedUnit({
@@ -2387,19 +2384,17 @@ name: Shape 1;
 /*#/#*//*#i30.i31.positioning.meta:positioning/meta.2*/
 data: /*!*/{}/*!*/;
 /*#/#*//*#i7.text.meta:text/meta*/
-name: Tecnología para divertirse y también para proteger 
-a tu familia.; customName: false;
+name: Chevrolet Quinox: Respaldo, diseño y tecnología en una SUV; customName: false;
 /*#/#*//*#i7.i8.positioning.meta:positioning/meta.2*/
+data: /*!*/{}/*!*/;
+/*#/#*//*#i12.text.meta:text/meta*/
+name: Este mes, precios que no volverás a ver.; customName: false;
+/*#/#*//*#i12.i13.positioning.meta:positioning/meta.2*/
 data: /*!*/{}/*!*/;
 /*#/#*//*#i16.image.meta:image/meta*/
 name: KPJNfzN.png; fileId: ; sourceTypeId: externalUrl; autoDimensions: 1;
 customName: false;
 /*#/#*//*#i16.i17.positioning.meta:positioning/meta.2*/
-data: /*!*/{"keepAspectRatio":true}/*!*/;
-/*#/#*//*#i37.image.meta:image/meta*/
-name: UoYZLf8.jpg; fileId: ; sourceTypeId: externalUrl; autoDimensions: 1;
-customName: false;
-/*#/#*//*#i37.i38.positioning.meta:positioning/meta.2*/
 data: /*!*/{"keepAspectRatio":true}/*!*/;
 /*#/#*//*#i2.slice.meta:slice/meta*/
 name: Slice 1;
@@ -2420,5 +2415,5 @@ data: /*!*/{}/*!*/;
 /*#/#*//*#i33.font.meta:font/meta*/
 name: Web Font: LouisRegular; type: font-local; customName: ;
 /*#/#*//*#i35.font.meta:font/meta*/
-name: Web Font: LouisGlobal2-Reg; type: font-local; customName: ;
+name: Font 1; type: font-local; customName: ;
 /*#/#*/--><!--#/#-->
