--- a/chevy/traverse/Venetian.html
+++ b/chevy/traverse/Venetian.html
@@ -2210,7 +2210,7 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
 /*#/#*//*#i16.image.css:image/base/css*/
 #i16 { opacity: 1; }
 /*#/#*//*#i16.i17.positioning.css:positioning/base/css.2*/
-#i16 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 112px; height: 38px;
+#i16 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 100px; height: 38px;
         -ms-transform: translate(0, 0) translate(180px, 553px) rotate(0deg);
         -webkit-transform: translate(0, 0) translate(180px, 553px) rotate(0deg);
         -moz-transform: translate(0, 0) translate(180px, 553px) rotate(0deg);
@@ -2269,7 +2269,7 @@ El sistema MyLink te permite disfrutar de tu Smartphone en la pantalla táctil d
 <!--#/#--><!--#i7.text.html:text/html-->
 <div id="i7">El nuevo Chevrolet Traverse con tecnología capaz de emocionarte.</div>
 <!--#/#--><!--#i16.image.html:image/html-->
-<img id="i16" src="https://i.imgur.com/ewo5bt5.jpg"/>
+<img id="i16" src="https://i.imgur.com/KPJNfzN.png"/>
 <!--#/#--><!--#i2.slice.html:slice/html-->
 <div id="i2" class="adf-SliceBox">
     <!--#i2.i4.slice-image.html:slice-image/html-->
