--- a/chevy/tahoe/Cube.html
+++ b/chevy/tahoe/Cube.html
@@ -529,7 +529,7 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
 /*#/#*//*#i4.i181.image.css:image/base/css*/
 #i181 { opacity: 1; }
 /*#/#*//*#i181.i182.positioning.css:positioning/base/css.2*/
-#i181 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 100px; height: 30px;
+#i181 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 85px; height: 30px;
         -ms-transform: translate(0, 0) translate(194px, 216px) rotate(0deg);
         -webkit-transform: translate(0, 0) translate(194px, 216px) rotate(0deg);
         -moz-transform: translate(0, 0) translate(194px, 216px) rotate(0deg);
@@ -709,7 +709,7 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
 /*#/#*//*#i5.i224.image.css:image/base/css*/
 #i224 { opacity: 1; }
 /*#/#*//*#i224.i225.positioning.css:positioning/base/css.2*/
-#i224 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 100px; height: 30px;
+#i224 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 85px; height: 30px;
         -ms-transform: translate(0, 0) translate(198px, 217px) rotate(0deg);
         -webkit-transform: translate(0, 0) translate(198px, 217px) rotate(0deg);
         -moz-transform: translate(0, 0) translate(198px, 217px) rotate(0deg);
@@ -760,7 +760,7 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
 /*#/#*//*#i6.i226.image.css:image/base/css*/
 #i226 { opacity: 1; }
 /*#/#*//*#i226.i227.positioning.css:positioning/base/css.2*/
-#i226 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 100px; height: 30px;
+#i226 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 85px; height: 30px;
         -ms-transform: translate(0, 0) translate(198px, 217px) rotate(0deg);
         -webkit-transform: translate(0, 0) translate(198px, 217px) rotate(0deg);
         -moz-transform: translate(0, 0) translate(198px, 217px) rotate(0deg);
@@ -816,7 +816,7 @@ url('fonts/') format('svg');
 <!--#/#--><!--#i4.i130.image.html:image/html-->
 <img id="i130" src="https://i.imgur.com/qwpthPF.jpg"/>
 <!--#/#--><!--#i4.i181.image.html:image/html-->
-<img id="i181" src="https://i.imgur.com/ewo5bt5.jpg"/>
+<img id="i181" src="https://i.imgur.com/KPJNfzN.png"/>
 <!--#/#--><!--#i4.i91.shape.html:shape/html-->
 <div id="i91"></div>
 <!--#/#-->
@@ -830,7 +830,7 @@ url('fonts/') format('svg');
 <!--#/#--><!--#i5.i58.image.html:image/html-->
 <img id="i58" src="https://i.imgur.com/H0hsGjw.jpg"/>
 <!--#/#--><!--#i5.i224.image.html:image/html-->
-<img id="i224" src="https://i.imgur.com/ewo5bt5.jpg"/>
+<img id="i224" src="https://i.imgur.com/KPJNfzN.png"/>
 <!--#/#--><!--#i5.i95.shape.html:shape/html-->
 <div id="i95"></div>
 <!--#/#-->
@@ -844,7 +844,7 @@ url('fonts/') format('svg');
 <!--#/#--><!--#i6.i60.image.html:image/html-->
 <img id="i60" src="https://i.imgur.com/2n2ilq8.jpg"/>
 <!--#/#--><!--#i6.i226.image.html:image/html-->
-<img id="i226" src="https://i.imgur.com/ewo5bt5.jpg"/>
+<img id="i226" src="https://i.imgur.com/KPJNfzN.png"/>
 <!--#/#--><!--#i6.i99.shape.html:shape/html-->
 <div id="i99"></div>
 <!--#/#-->
