--- a/chevy/equinox/Cube.html
+++ b/chevy/equinox/Cube.html
@@ -840,7 +840,7 @@ url('fonts/') format('svg');
     <!--#i6.i40.shape.html:shape/html-->
 <div id="i40"></div>
 <!--#/#--><!--#i6.i34.text.html:text/html-->
-<div id="i34">Chevrolet Equinox: Respaldo, diseño y tecnología en una SUV</div>
+<div id="i34">Chevrolet Equinox: Respaldo, diseño y tecnología en una SUV.</div>
 <!--#/#--><!--#i6.i60.image.html:image/html-->
 <img id="i60" src="https://i.imgur.com/WRLSGEZ.jpg"/>
 <!--#/#--><!--#i6.i232.image.html:image/html-->
