ajuste tamaño titulo

--- a/Kidzania/VideoExt.html
+++ b/Kidzania/VideoExt.html
@@ -121,7 +121,7 @@
         }
 
         .tgx_text_title {
-            font-size: 160%;
+            font-size: 150%;
             color: #453936;
             display: inline-block;
             width: 90%;
@@ -139,7 +139,7 @@
         }
 
         .tgx_text_bold {
-            font-weight: 900;
+            font-weight: 800;
         }
 
         .tgx_text_small {
@@ -314,7 +314,7 @@
            
         <div class="tgx_text">
             <span class="tgx_text_title tgx_text_bold">
-              ¿Quieres sorprender a tus hijos en su cumpleaños?
+              ¿Quieres sorprender <br>a tus hijos en su cumpleaños?
             </span>
             <span class="tgx_text_light tgx_text_small" style="color:black;">
                 <p style="margin-top: 5px;"> A partir del <b> 7 de Diciembre</b>  en <b>KidZania Guadalajara </b> ¡Conviérte a tu hijo en artista, héroe, campeón o chef, y celebra su cumpleaños en grande! En <b>KidZania</b> <i>tus hijos serán lo que quieran ser.</i>
