--- a/Kidzania/Fade.html
+++ b/Kidzania/Fade.html
@@ -50,7 +50,7 @@
             z-index: 5;
             margin-left: 38%;
             left: -30px;
-            background-color: #bd234d;
+            background-color: #f38b00;
             padding: 5px;
             border-radius: 20px;
             text-align: center;
