--- a/Kidzania/Venetian.html
+++ b/Kidzania/Venetian.html
@@ -2279,7 +2279,7 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
 <!--#/#--><!--#i16.image.html:image/html-->
 <img id="i16" src="https://i.imgur.com/GYHLX4h.png"/>
 <!--#/#--><!--#i36.image.html:image/html-->
-<img id="i36" src="https://i.imgur.com/HH3ICY4.png"/>
+<img id="i36" src="https://i.imgur.com/O64V8FQ.png"/>
 <!--#/#--><!--#/#--><!--#js:common/js-->
 <script>
 /*#i30.i31.positioning.js:positioning/base/js.2*/
