--- a/chevy/equinox/Cube.html
+++ b/chevy/equinox/Cube.html
@@ -897,7 +897,7 @@ bmShow('i181');
 /* Name: On Click; */
 document.getElementById('i91').addEventListener('click', function(e){
     /*#i177.i178.actions-clicktag.js:actions-clicktag/base/js.1*/
-    window.mraid ? mraid.open(Adform.getClickURL('clickTAG')) : window.open(dhtml.getVar('clickTAG', 'https://www.chevrolet.com.pe/equinox-suv.html'), dhtml.getVar('landingPageTarget', '_blank'));
+    window.mraid ? mraid.open(Adform.getClickURL('clickTAG')) : window.open(dhtml.getVar('clickTAG', 'https://www.chevrolet.com.pe/solo-una-vida.html'), dhtml.getVar('landingPageTarget', '_blank'));
 /*#/#*/
 });
 /*#/#*//*#i4.i50.actions.js:actions/base/js*/
@@ -915,7 +915,7 @@ bmShow('i230');
 /* Name: On Click; */
 document.getElementById('i95').addEventListener('click', function(e){
     /*#i175.i176.actions-clicktag.js:actions-clicktag/base/js.1*/
-    window.mraid ? mraid.open(Adform.getClickURL('clickTAG')) : window.open(dhtml.getVar('clickTAG', 'https://www.chevrolet.com.pe/equinox-suv.html'), dhtml.getVar('landingPageTarget', '_blank'));
+    window.mraid ? mraid.open(Adform.getClickURL('clickTAG')) : window.open(dhtml.getVar('clickTAG', 'https://www.chevrolet.com.pe/solo-una-vida.html'), dhtml.getVar('landingPageTarget', '_blank'));
 /*#/#*/
 });
 /*#/#*//*#i5.i52.actions.js:actions/base/js*/
@@ -933,7 +933,7 @@ bmShow('i232');
 /* Name: On Click; */
 document.getElementById('i99').addEventListener('click', function(e){
     /*#i179.i180.actions-clicktag.js:actions-clicktag/base/js.1*/
-    window.mraid ? mraid.open(Adform.getClickURL('clickTAG')) : window.open(dhtml.getVar('clickTAG', 'https://www.chevrolet.com.pe/equinox-suv.html'), dhtml.getVar('landingPageTarget', '_blank'));
+    window.mraid ? mraid.open(Adform.getClickURL('clickTAG')) : window.open(dhtml.getVar('clickTAG', 'https://www.chevrolet.com.pe/solo-una-vida.html'), dhtml.getVar('landingPageTarget', '_blank'));
 /*#/#*/
 });
 /*#/#*//*#i6.i54.actions.js:actions/base/js*/
