--- a/chevy/equinox/Venetian.html
+++ b/chevy/equinox/Venetian.html
@@ -2359,7 +2359,7 @@ var el = document.getElementById('i26');
 
 el.addEventListener('click', function(e){
     /*#i28.i29.actions-clicktag.js:actions-clicktag/base/js.2*/
-    window.mraid ? mraid.open(Adform.getClickURL('clickTAG')) : window.open(dhtml.getVar('clickTAG', 'https://www.chevrolet.com.pe/equinox-suv.html'), dhtml.getVar('landingPageTarget', '_blank'));
+    window.mraid ? mraid.open(Adform.getClickURL('clickTAG')) : window.open(dhtml.getVar('clickTAG', 'https://www.chevrolet.com.pe/solo-una-vida.html'), dhtml.getVar('landingPageTarget', '_blank'));
 /*#/#*/
 });
 
