--- a/Delta 3/Venetian.html
+++ b/Delta 3/Venetian.html
@@ -2238,41 +2238,14 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
         -moz-transform: translate(0, 0) translate(1px, 0px) rotate(0deg);
         transform: translate(0, 0) translate(1px, 0px) rotate(0deg);
 }
-/*#/#*//*#i32.image.css:image/base/css*/
-#i32 { opacity: 1; }
-/*#/#*//*#i32.i33.positioning.css:positioning/base/css.2*/
-#i32 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 22px; height: 23px;
-        -ms-transform: translate(0, 0) translate(7px, 568px) rotate(0deg);
-        -webkit-transform: translate(0, 0) translate(7px, 568px) rotate(0deg);
-        -moz-transform: translate(0, 0) translate(7px, 568px) rotate(0deg);
-        transform: translate(0, 0) translate(7px, 568px) rotate(0deg);
-}
-/*#/#*//*#i34.image.css:image/base/css*/
-#i34 { opacity: 1; }
-/*#/#*//*#i34.i35.positioning.css:positioning/base/css.2*/
-#i34 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 22px; height: 23px;
-        -ms-transform: translate(0, 0) translate(37px, 568px) rotate(0deg);
-        -webkit-transform: translate(0, 0) translate(37px, 568px) rotate(0deg);
-        -moz-transform: translate(0, 0) translate(37px, 568px) rotate(0deg);
-        transform: translate(0, 0) translate(37px, 568px) rotate(0deg);
-}
-/*#/#*//*#i36.image.css:image/base/css*/
-#i36 { opacity: 1; }
-/*#/#*//*#i36.i37.positioning.css:positioning/base/css.2*/
-#i36 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 22px; height: 23px;
-        -ms-transform: translate(0, 0) translate(67px, 568px) rotate(0deg);
-        -webkit-transform: translate(0, 0) translate(67px, 568px) rotate(0deg);
-        -moz-transform: translate(0, 0) translate(67px, 568px) rotate(0deg);
-        transform: translate(0, 0) translate(67px, 568px) rotate(0deg);
-}
 /*#/#*//*#i44.image.css:image/base/css*/
 #i44 { opacity: 1; }
 /*#/#*//*#i44.i45.positioning.css:positioning/base/css.2*/
-#i44 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 180px; height: 28px;
-        -ms-transform: translate(0, 0) translate(112px, 564px) rotate(0deg);
-        -webkit-transform: translate(0, 0) translate(112px, 564px) rotate(0deg);
-        -moz-transform: translate(0, 0) translate(112px, 564px) rotate(0deg);
-        transform: translate(0, 0) translate(112px, 564px) rotate(0deg);
+#i44 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 224px; height: 28px;
+        -ms-transform: translate(0, 0) translate(67px, 565px) rotate(0deg);
+        -webkit-transform: translate(0, 0) translate(67px, 565px) rotate(0deg);
+        -moz-transform: translate(0, 0) translate(67px, 565px) rotate(0deg);
+        transform: translate(0, 0) translate(67px, 565px) rotate(0deg);
 }
 /*#/#*/
 </style>
@@ -2298,14 +2271,8 @@ o Los Ángeles?
 <button id="i14">Conoce más</button>
 <!--#/#--><!--#i26.button.html:button/html-->
 <button id="i26"></button>
-<!--#/#--><!--#i32.image.html:image/html-->
-<img id="i32" src="https://i.imgur.com/0TbvEn4.png"/>
-<!--#/#--><!--#i34.image.html:image/html-->
-<img id="i34" src="https://i.imgur.com/ct3Z8bp.png"/>
-<!--#/#--><!--#i36.image.html:image/html-->
-<img id="i36" src="https://i.imgur.com/WIKgKGv.png""/>
 <!--#/#--><!--#i44.image.html:image/html-->
-<img id="i44" src="https://i.imgur.com/8jnxoMj.png"/>
+<img id="i44" src="http://i.imgur.com/47wMV5o.jpg"/>
 <!--#/#--><!--#/#--><!--#js:common/js-->
 <script>
 /*#i30.i31.positioning.js:positioning/base/js.2*/
@@ -2373,57 +2340,6 @@ el.addEventListener('click', function(e){
 if ('click' === 'click') {
     el.style.cursor = 'pointer';
 }
-/*#/#*//*#i32.image.js:image/base/js*/
-
-/*#/#*//*#i32.i33.positioning.js:positioning/base/js.2*/
-bmShow('i32');
-/*#/#*//*#i32.i38.actions.js:actions/base/js.1*/
-/* Name: On Click; */
-var el = document.getElementById('i32');
-
-el.addEventListener('click', function(e){
-    /*#i38.i39.actions-clicktag.js:actions-clicktag/base/js.2*/
-    window.mraid ? mraid.open(Adform.getClickURL('clickTAG2')) : window.open(dhtml.getVar('clickTAG2', 'https://www.facebook.com/sharer/sharer.php?u=https://world.aeromexico.com/es/viaja-con-aeromexico/rutas-y-alianzas/alianzas/delta-airlines/?site=mx'), dhtml.getVar('landingPageTarget', '_blank'));
-/*#/#*/
-});
-
-if ('click' === 'click') {
-    el.style.cursor = 'pointer';
-}
-/*#/#*//*#i34.image.js:image/base/js*/
-
-/*#/#*//*#i34.i35.positioning.js:positioning/base/js.2*/
-bmShow('i34');
-/*#/#*//*#i34.i40.actions.js:actions/base/js.1*/
-/* Name: On Click; */
-var el = document.getElementById('i34');
-
-el.addEventListener('click', function(e){
-    /*#i40.i41.actions-clicktag.js:actions-clicktag/base/js.2*/
-    window.mraid ? mraid.open(Adform.getClickURL('clickTAG3')) : window.open(dhtml.getVar('clickTAG3', 'https://plus.google.com/share?url=https://world.aeromexico.com/es/viaja-con-aeromexico/rutas-y-alianzas/alianzas/delta-airlines/?site=mx'), dhtml.getVar('landingPageTarget', '_blank'));
-/*#/#*/
-});
-
-if ('click' === 'click') {
-    el.style.cursor = 'pointer';
-}
-/*#/#*//*#i36.image.js:image/base/js*/
-
-/*#/#*//*#i36.i37.positioning.js:positioning/base/js.2*/
-bmShow('i36');
-/*#/#*//*#i36.i42.actions.js:actions/base/js.1*/
-/* Name: On Click; */
-var el = document.getElementById('i36');
-
-el.addEventListener('click', function(e){
-    /*#i42.i43.actions-clicktag.js:actions-clicktag/base/js.2*/
-    window.mraid ? mraid.open(Adform.getClickURL('clickTAG4')) : window.open(dhtml.getVar('clickTAG4', 'https://world.aeromexico.com/es/viaja-con-aeromexico/rutas-y-alianzas/alianzas/delta-airlines/?site=mx'), dhtml.getVar('landingPageTarget', '_blank'));
-/*#/#*/
-});
-
-if ('click' === 'click') {
-    el.style.cursor = 'pointer';
-}
 /*#/#*//*#i44.image.js:image/base/js*/
 
 /*#/#*//*#i44.i45.positioning.js:positioning/base/js.2*/
@@ -2470,23 +2386,8 @@ name: ;
 customName: false;
 /*#/#*//*#i26.i27.positioning.meta:positioning/meta.2*/
 data: /*!*/{}/*!*/;
-/*#/#*//*#i32.image.meta:image/meta*/
-name: 0TbvEn4.png; fileId: ; sourceTypeId: externalUrl; autoDimensions: 1;
-customName: false;
-/*#/#*//*#i32.i33.positioning.meta:positioning/meta.2*/
-data: /*!*/{"keepAspectRatio":true}/*!*/;
-/*#/#*//*#i34.image.meta:image/meta*/
-name: ct3Z8bp.png; fileId: ; sourceTypeId: externalUrl; autoDimensions: 1;
-customName: false;
-/*#/#*//*#i34.i35.positioning.meta:positioning/meta.2*/
-data: /*!*/{"keepAspectRatio":true}/*!*/;
-/*#/#*//*#i36.image.meta:image/meta*/
-name: WIKgKGv.png"; fileId: ; sourceTypeId: externalUrl; autoDimensions: 1;
-customName: false;
-/*#/#*//*#i36.i37.positioning.meta:positioning/meta.2*/
-data: /*!*/{"keepAspectRatio":true}/*!*/;
 /*#/#*//*#i44.image.meta:image/meta*/
-name: 8jnxoMj.png; fileId: ; sourceTypeId: externalUrl; autoDimensions: 1;
+name: 47wMV5o.jpg; fileId: ; sourceTypeId: externalUrl; autoDimensions: 1;
 customName: false;
 /*#/#*//*#i44.i45.positioning.meta:positioning/meta.2*/
 data: /*!*/{"keepAspectRatio":true}/*!*/;
