--- a/chevy/equinox/Venetian.html
+++ b/chevy/equinox/Venetian.html
@@ -2276,7 +2276,7 @@ url('fonts/') format('svg');
 <!--#html:common/html--><!--#i1.core.html:core/html--><!--#/#--><!--#i30.shape.html:shape/html-->
 <div id="i30"></div>
 <!--#/#--><!--#i7.text.html:text/html-->
-<div id="i7">Chevrolet Quinox: Respaldo, diseño y tecnología en una SUV</div>
+<div id="i7">Chevrolet Equinox: Respaldo, diseño y tecnología en una SUV</div>
 <!--#/#--><!--#i12.text.html:text/html-->
 <div id="i12">Este mes, precios que no volverás a ver.</div>
 <!--#/#--><!--#i16.image.html:image/html-->
@@ -2384,7 +2384,7 @@ name: Shape 1;
 /*#/#*//*#i30.i31.positioning.meta:positioning/meta.2*/
 data: /*!*/{}/*!*/;
 /*#/#*//*#i7.text.meta:text/meta*/
-name: Chevrolet Quinox: Respaldo, diseño y tecnología en una SUV; customName: false;
+name: Chevrolet Equinox: Respaldo, diseño y tecnología en una SUV; customName: false;
 /*#/#*//*#i7.i8.positioning.meta:positioning/meta.2*/
 data: /*!*/{}/*!*/;
 /*#/#*//*#i12.text.meta:text/meta*/
